unpackaged/main/default/objects/MaintenancePlan/MaintenancePlan.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>