unpackaged/main/default/objects/MaintenancePlan/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <label>Activity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>