unpackaged/main/default/objects/MaintenancePlan/fields/Calibration_Plan__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calibration Plan</label>
    <type>Checkbox</type>
</CustomField>