unpackaged/main/default/objects/MaintenancePlan/fields/Crew_Size__c.field-meta.xml
<CustomField>
    <fullName>Crew_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This will determine how many Service Appointments are created for each Work Order.</inlineHelpText>
    <label>Crew Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>