unpackaged/main/default/objects/MaintenancePlan/fields/Estimated_Work_Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Work_Order_Cost__c</fullName>
    <label>Estimated Work Order Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>