unpackaged/main/default/objects/MaintenancePlan/fields/Maintenance_Assets__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Assets__c</fullName>
    <label>Maintenance Assets</label>
    <summaryForeignKey>MaintenanceAsset.MaintenancePlanId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>