unpackaged/main/default/objects/MaintenancePlan/fields/Preferred_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Resource_Name__c</fullName>
    <description>Preferred Resource Group/Name</description>
    <inlineHelpText>Enter A Resource Group/ Name that is Preferred to complete Work</inlineHelpText>
    <label>Preferred Resource Group/ Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>