unpackaged/main/default/objects/MaintenancePlan/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coriolis Meter Proving</fullName>
            </value>
            <value>
                <fullName>Emission</fullName>
            </value>
            <value>
                <fullName>Engine/Compressor</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Gas Meter Calibration</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>LDAR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pigging Line</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>PSV Testing</fullName>
            </value>
            <value>
                <fullName>Safety System Testing</fullName>
            </value>
            <value>
                <fullName>Water Turbine Meter Calibration</fullName>
            </value>
            <value>
                <fullName>Wellhead</fullName>
            </value>
            <value>
                <fullName>Well Stop</fullName>
            </value>
            <value>
                <fullName>AVO Inspection</fullName>
            </value>
            <value>
                <fullName>Facility Maintenance</fullName>
            </value>
            <value>
                <fullName>Frac Pond - Production Water Disposal Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>