unpackaged/main/default/objects/MaintenancePlan/fields/Proving_Plan__c.field-meta.xml
<CustomField>
    <fullName>Proving_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proving Plan</label>
    <type>Checkbox</type>
</CustomField>