unpackaged/main/default/objects/MaintenancePlan/fields/Proving_PlanMA__c.field-meta.xml
<CustomField>
    <fullName>Proving_PlanMA__c</fullName>
    <formula>Proving_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proving Plan Maintenance Asset</label>
    <type>Checkbox</type>
</CustomField>