unpackaged/main/default/objects/MaintenancePlan/fields/Regulatory__c.field-meta.xml
<CustomField>
    <fullName>Regulatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if MP is Regulatory</description>
    <label>Regulatory</label>
    <type>Checkbox</type>
</CustomField>