unpackaged/main/default/objects/MaintenancePlan/fields/This_plan_requires_parts__c.field-meta.xml
<CustomField>
    <fullName>This_plan_requires_parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This plan requires parts</label>
    <type>Checkbox</type>
</CustomField>