unpackaged/main/default/objects/MaintenancePlan/fields/Update_Asset_on_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Update_Asset_on_Date_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Asset on Date Change</label>
    <type>Checkbox</type>
</CustomField>