unpackaged/main/default/objects/MaintenancePlan/fields/Well_Tier__c.field-meta.xml
<CustomField>
    <fullName>Well_Tier__c</fullName>
    <inlineHelpText>This should be selected for Wells only. This allows for the automation of the assignment of wells to the appropriate tier-based maintenance plan.</inlineHelpText>
    <label>Well Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Well_Tiers</valueSetName>
    </valueSet>
</CustomField>