unpackaged/main/default/objects/MaintenancePlan/listViews/All_MaintenancePlans.listView-meta.xml
<ListView>
    <fullName>All_MaintenancePlans</fullName>
    <columns>WorkType</columns>
    <columns>Preferred_Resource_Name__c</columns>
    <columns>CreatedDate</columns>
    <columns>Name</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>Regulatory__c</columns>
    <columns>Proving_Plan__c</columns>
    <columns>Calibration_Plan__c</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>Estimated_Work_Order_Cost__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>StartDate</columns>
    <columns>DoesAutoGenerateWorkOrders</columns>
    <columns>Update_Asset_on_Date_Change__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Maintenance Plans</label>
</ListView>