unpackaged/main/default/objects/MaintenancePlan/listViews/Automated_MP.listView-meta.xml
<ListView>
    <fullName>Automated_MP</fullName>
    <columns>DoesAutoGenerateWorkOrders</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>Name</columns>
    <columns>WorkType</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>Frequency</columns>
    <columns>FrequencyType</columns>
    <columns>GenerationHorizon</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DoesAutoGenerateWorkOrders</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Automated MP</label>
</ListView>