unpackaged/main/default/objects/MaintenancePlan/listViews/DOT_MPs.listView-meta.xml
<ListView>
    <fullName>DOT_MPs</fullName>
    <columns>Name</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>WorkType</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>Frequency</columns>
    <columns>GenerationHorizon</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MaintenancePlanTitle</field>
        <operation>contains</operation>
        <value>DOT</value>
    </filters>
    <label>DOT MPs</label>
</ListView>