unpackaged/main/default/objects/MaintenancePlan/listViews/FRAC_Pond_MPs.listView-meta.xml
<ListView>
    <fullName>FRAC_Pond_MPs</fullName>
    <columns>Name</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MaintenancePlanTitle</field>
        <operation>contains</operation>
        <value>frac</value>
    </filters>
    <label>FRAC Pond MPs</label>
</ListView>