unpackaged/main/default/objects/MaintenancePlan/listViews/Meter_Maintenance_Plans.listView-meta.xml
<ListView>
    <fullName>Meter_Maintenance_Plans</fullName>
    <columns>CreatedDate</columns>
    <columns>Name</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>Proving_Plan__c</columns>
    <columns>Calibration_Plan__c</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>DoesAutoGenerateWorkOrders</columns>
    <columns>EndDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Maintenance_Assets__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Primary__c</field>
        <operation>equals</operation>
        <value>Coriolis Meter Proving,Gas Meter Calibration</value>
    </filters>
    <filters>
        <field>MaintenancePlanTitle</field>
        <operation>notContain</operation>
        <value>Do Not Use</value>
    </filters>
    <label>Meter Maintenance Plans</label>
</ListView>