unpackaged/main/default/objects/MaintenancePlan/listViews/Regulatory_Maintenance_Plans.listView-meta.xml
<ListView>
    <fullName>Regulatory_Maintenance_Plans</fullName>
    <columns>Name</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>Description</columns>
    <columns>Primary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Regulatory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Regulatory Maintenance Plans</label>
</ListView>