unpackaged/main/default/objects/MaintenancePlan/listViews/SPCC.listView-meta.xml
<ListView>
    <fullName>SPCC</fullName>
    <columns>MaintenancePlanTitle</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>Name</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>WorkType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MaintenancePlanTitle</field>
        <operation>contains</operation>
        <value>SPCC</value>
    </filters>
    <label>SPCC</label>
</ListView>