unpackaged/main/default/objects/MaintenancePlan/listViews/Well_Stop_Maintenance_Plans.listView-meta.xml
<ListView>
    <fullName>Well_Stop_Maintenance_Plans</fullName>
    <columns>Name</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>DoesAutoGenerateWorkOrders</columns>
    <columns>Maintenance_Assets__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkType</field>
        <operation>equals</operation>
        <value>Well Stop</value>
    </filters>
    <label>Well Stop Maintenance Plans</label>
</ListView>