unpackaged/main/default/objects/MaintenancePlan/listViews/Well_stops_Lists.listView-meta.xml
<ListView>
    <fullName>Well_stops_Lists</fullName>
    <columns>Name</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>Maintenance_Assets__c</columns>
    <columns>WorkOrderGenerationStatus</columns>
    <columns>Update_Asset_on_Date_Change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkType</field>
        <operation>equals</operation>
        <value>Well stop</value>
    </filters>
    <label>Well Stops Lists</label>
</ListView>